# CWebServer

./: CMakeLists.txt  CWebServer.kdev4  README.md
server/: main.cpp
src/: CListenSocket.cpp  CListenSocket.h  HttpProcessers.cpp  IOLoop.cpp  IOLoop.h  main.cpp
src/HTTP/: CWSRecvFrame.cpp  CWSRecvFrame.h  CWSSendFrame.cpp  CWSSendFrame.h  CWSSendMaskFrame.cpp  CWSSendMaskFrame.h  HttpClientRequest.cpp  HttpClientRequest.h  HttpClientResponse.cpp  HttpClientResponse.h  HttpServerRequest.cpp  HttpServerRequest.h  HttpServerResponse.cpp  HttpServerResponse.h
src/Pages/: CIndexPage.cpp  CIndexPage.h  CStaticPath.cpp  CStaticPath.h  CWebSocketPage.cpp  CWebSocketPage.h
src/tools/: ByteStream.cpp  ByteStream.h  CBuffer.cpp  CBuffer.h  IPtr.h  SSLSocket.cpp  SSLSocket.h  base64.cpp  base64.h  gtools.cpp  locks.cpp  locks.h  stdext.h
static/: bigscreenhost.html
test/: websocket_clienttest.cpp
